fixing z-index sun on mobile landscape

--- a/assets/main.css
+++ b/assets/main.css
@@ -29,7 +29,7 @@
 
 
 .sun{
-  z-index: 10;
+  z-index: -1;
   width:49vh;
   height:49vh;
   border-radius:100%;
